# mlx-week6

./: .gitattributes  pyproject.toml
KAI/: flickr_8K_TF_CNN.ipynb
Oleksandr/: captureTranformer-1.ipynb  captureTranformer-2.ipynb  captureTranformer.ipynb  spm_full_text_model.model
dataset/: 0000.parquet  0001.parquet  0002.parquet  0003.parquet  0004.parquet  0005.parquet  0006.parquet  0007.parquet  0008.parquet  spm_10000_vocab_model.model  spm_10000_vocab_model.vocab
models/: spm_10000_vocab_model_image_caption.model
notebooks/: metric.ipynb  prepare_data.ipynb
src/mlx_week6/: captions_preprocess.py  dataset.py  image_preprocess.py  model_utils.py  tensorboard_utils.py  utils.py
